Fixed blocking of Session-Threads. Added some resources